--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-electron-builder",
+  "name": "SGWS Data Foramtter",
   "private": true,
   "engines": {
     "node": ">=v14.16.0",
@@ -25,7 +25,6 @@
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
     "@vitejs/plugin-vue": "^1.1.5",
-    "@vue/compiler-sfc": "^3.0.7",
     "chokidar": "^3.5.1",
     "cross-env": "^7.0.3",
     "electron": "^12.0.1",
@@ -38,14 +37,11 @@
     "react-router-dom": "^5.2.0",
     "spectron": "^14.0.0",
     "typescript": "^4.2.3",
-    "vite": "^2.1.2",
-    "vue-tsc": "^0.0.14"
+    "vite": "^2.1.2"
   },
   "dependencies": {
     "@fontsource/roboto": "^4.2.2",
     "electron-updater": "^4.3.8",
-    "exceljs": "^4.2.1",
-    "vue": "^3.0.7",
-    "vue-router": "^4.0.5"
+    "exceljs": "^4.2.1"
   }
 }
