--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -44,17 +44,11 @@ jobs:
       
       - name: Get branch
         id: get-branch
-        run: echo ::set-output name=branch::${GITHUB_REF##/*}
+        run: echo ::set-output name=branch::${GITHUB_REF#refs/*/}
 
       - name: Concat Final Version
         id: final-version
-        run: echo ::set-output name=version::${{steps.get-branch.outputs.branch}}-v${{steps.version.outputs.version}}
-
-      - name: generate-changelog-action
-        uses: ScottBrenner/generate-changelog-action@1.0.3
-        id: changelog
-        env:
-          REPO: ${{ github.repository }}
+        run: echo ::set-output name=version::${{steps.get-branch.outputs.branch}}-v${{steps.version.outputs.current-version}}
 
       - name: Delete outdated drafts
         uses: hugo19941994/delete-draft-releases@v0.1.0
@@ -67,8 +61,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.github_token }}
         with:
           draft: true
-          tag_name: v${{ steps.final-version.outputs.version }}
-          release_name: v${{ steps.final-version.outputs.version }}
+          tag_name: ${{ steps.final-version.outputs.version }}
+          release_name: ${{ steps.final-version.outputs.version }}
           body: Release
 
   compile:
